syntax = "proto3";
package opentelemetry.proto.trace.v1;

option csharp_namespace = "OpenTelemetry.Proto.Trace.V1";
option java_multiple_files = true;
option java_package = "io.opentelemetry.proto.trace.v1";
option go_package = "go.opentelemetry.io/proto/otlp/trace/v1";

// Minimal set for a single span
message ResourceSpans {
  repeated ScopeSpans scope_spans = 2;
}

message ScopeSpans {
  repeated Span spans = 1;
}

message Span {
  string trace_id = 1;
  string span_id = 2;
  string name = 3;
}
